--- a/test.html
+++ b/test.html
@@ -57,7 +57,15 @@
 </body>
 </html>
 
+CREATE DATABASE netbian_db DEFAULT CHARACTER SET utf8 COLLATE utf8_general_ci;
+CREATE TABLE netbian_info (
+  title char(32) NOT NULL,
+  link_address char(100),
+)
 
-//*[@id="header"]/div[1]/ul/li[1]/div/a[1]
-//*[@id="header"]/div[1]/ul/li[1]/div/a[2]
-        //*[@id="header"]/div[1]/ul/li[1]/div/a[1]
+
+
+
+
+
+
